--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <main class="main">
         <section class="section-1">
-            <div class="section-1-container">
+            <div class="section-1-container"></div>
                 
             </div>
         </section>
